# automatic_parking_app

./: .gitignore  CMakeLists.txt  README_OCRSPACE.txt
controller/: parkingcontroller.cpp  parkingcontroller.h
database/: parking.db
domain/model/: parkingrecord.h
domain/ports/: ibarrier.h  icamerasnapshotprovider.h  icardreader.h  iocr.h  iparkingrepository.h
lib/gstreamer/1.0/msvc_x86_64/etc/fonts/conf.d/: README
lib/gstreamer/1.0/msvc_x86_64/include/gstreamer-1.0/gst/: gstversion.h
lib/gstreamer/1.0/msvc_x86_64/include/openssl/: configuration.h
lib/gstreamer/1.0/msvc_x86_64/lib/: FLAC.def  FLAC.lib  SvtAv1Enc.def  SvtAv1Enc.lib  SvtJpegxs.def  SvtJpegxs.lib  ass.def  ass.lib  bz2.lib  cairo-gobject.def  cairo-script-interpreter.def  cairo.def  charset.lib  crypto.def  crypto.lib  dav1d.def  dav1d.lib  dv.def  dv.lib  expat.def  ffi.lib  fontconfig.def  fontconfig.lib  freetype.def  freetype.lib  fribidi.def  gdk_pixbuf-2.0.lib  gio-2.0.def  gio-2.0.lib  girepository-1.0.def  girepository-1.0.lib  glib-2.0.def  glib-2.0.lib  gmodule-2.0.def  gobject-2.0.def  gobject-2.0.lib  graphene-1.0.lib  gstadaptivedemux-1.0.lib  gstallocators-1.0.def  gstallocators-1.0.lib  (+152 more)
lib/gstreamer/1.0/msvc_x86_64/lib/girepository-1.0/: GIRepository-2.0.typelib  GLib-2.0.typelib  GObject-2.0.typelib  GdkPixbuf-2.0.typelib  Gio-2.0.typelib  Gst-1.0.typelib  GstAllocators-1.0.typelib  GstApp-1.0.typelib  GstAudio-1.0.typelib  GstBase-1.0.typelib  GstGL-1.0.typelib  GstInsertBin-1.0.typelib  GstMpegts-1.0.typelib  GstNet-1.0.typelib  GstPbutils-1.0.typelib  GstPlay-1.0.typelib  GstPlayer-1.0.typelib  GstRtp-1.0.typelib  GstRtsp-1.0.typelib  GstRtspServer-1.0.typelib  GstSdp-1.0.typelib  GstTag-1.0.typelib  GstTranscoder-1.0.typelib  GstVideo-1.0.typelib  HarfBuzz-0.0.typelib  Json-1.0.typelib  Pango-1.0.typelib  Soup-3.0.typelib  cairo-1.0.typelib  win32-1.0.typelib
lib/gstreamer/1.0/msvc_x86_64/lib/pkgconfig/: SvtAv1Enc.pc  SvtJpegxs.pc  cairo-fc.pc  cairo-ft.pc  cairo-gobject.pc  cairo-pdf.pc  cairo-png.pc  cairo-ps.pc  cairo-svg.pc  cairo-win32-font.pc  cairo-win32.pc  cairo.pc  dav1d.pc  expat.pc  flac.pc  fontconfig.pc  freetype2.pc  fribidi.pc  gdk-pixbuf-2.0.pc  gio-2.0.pc  gio-windows-2.0.pc  glib-2.0.pc  gmodule-2.0.pc  gmodule-no-export-2.0.pc  gobject-2.0.pc  gobject-introspection-1.0.pc  gobject-introspection-no-export-1.0.pc  graphene-1.0.pc  gstreamer-1.0.pc  gstreamer-allocators-1.0.pc  gstreamer-analytics-1.0.pc  gstreamer-app-1.0.pc  gstreamer-audio-1.0.pc  gstreamer-bad-audio-1.0.pc  gstreamer-base-1.0.pc  gstreamer-check-1.0.pc  gstreamer-codecparsers-1.0.pc  gstreamer-controller-1.0.pc  gstreamer-cuda-1.0.pc  gstreamer-d3d11-1.0.pc  (+73 more)
lib/gstreamer/1.0/msvc_x86_64/share/gir-1.0/: GIRepository-2.0.gir  GModule-2.0.gir  GObject-2.0.gir  GdkPixbuf-2.0.gir  Gst-1.0.gir  GstAllocators-1.0.gir  GstApp-1.0.gir  GstAudio-1.0.gir  GstBase-1.0.gir  GstCheck-1.0.gir  GstController-1.0.gir  GstGL-1.0.gir  GstInsertBin-1.0.gir  GstMpegts-1.0.gir  GstNet-1.0.gir  GstPbutils-1.0.gir  GstPlay-1.0.gir  GstPlayer-1.0.gir  GstRtp-1.0.gir  GstRtsp-1.0.gir  GstRtspServer-1.0.gir  GstSdp-1.0.gir  GstTag-1.0.gir  GstTranscoder-1.0.gir  GstVideo-1.0.gir  HarfBuzz-0.0.gir  Json-1.0.gir  Pango-1.0.gir  PangoCairo-1.0.gir  Soup-3.0.gir  cairo-1.0.gir
lib/gstreamer/1.0/msvc_x86_64/share/gstreamer/: gst-env
lib/onnxruntime-win-x64-1.22.0/: CodeSignSummary-63cf284e-fe31-42a8-b81f-8c99e3fb887e.md  GIT_COMMIT_ID
lib/tesseract/debug/lib/: archive.lib  bz2d.lib  gif.lib  icudtd.lib  icuind.lib  icuiod.lib  icutud.lib  icuucd.lib  leptonica-1.85.0d.lib  libcrypto.lib  libcurl-d.lib  libpng16d.lib  libwebpmux.lib  lz4d.lib  lzma.lib  tesseract55d.lib  tiffd.lib  turbojpeg.lib  zlibd.lib  zstd.lib
lib/tesseract/debug/lib/pkgconfig/: icu-i18n.pc  icu-io.pc  icu-uc.pc  lept.pc  libarchive.pc  libcrypto.pc  libcurl.pc  libjpeg.pc  liblzma.pc  libopenjp2.pc  libpng.pc  libsharpyuv.pc  libssl.pc  libturbojpeg.pc  libwebp.pc  libwebpdecoder.pc  libwebpdemux.pc  libwebpmux.pc  openssl.pc  tesseract.pc
lib/tesseract/include/: archive.h  archive_entry.h
lib/tesseract/include/openjpeg-2.5/: openjpeg.h
lib/tesseract/lib/: bz2.lib  icudt.lib  icuin.lib  icuio.lib  icutu.lib  icuuc.lib  leptonica-1.85.0.lib  libcurl.lib  libsharpyuv.lib  libwebp.lib  libwebpdecoder.lib  libwebpdemux.lib  openjp2.lib  tesseract55.lib
lib/tesseract/lib/pkgconfig/: icu-i18n.pc  icu-io.pc  icu-uc.pc  lept.pc  libarchive.pc  libcrypto.pc  libcurl.pc  libjpeg.pc  libopenjp2.pc  libpng16.pc  libsharpyuv.pc  libssl.pc  libturbojpeg.pc  libwebp.pc  libwebpdecoder.pc  libwebpdemux.pc  libwebpmux.pc  openssl.pc  tesseract.pc
src/: barriercontroller.cpp  barriercontroller.h  cameramanager.cpp  cameramanager.h  cardreader.cpp  cardreader.h  main.cpp  ocrprocessor.cpp  ocrprocessor.h
src/assets/: assets.qrc
src/qml/: MainWindow.qml  MainWindowForm.ui.qml  resources.qrc
src/qml/components/: HidLogPanel.ui.qml  LaneComponent.ui.qml  NavDrawer.ui.qml  ToastComponent.ui.qml
src/qml/dialogs/: AdminDialog.ui.qml  BarrierSettingsDialog.ui.qml  CameraSettingsDialog.ui.qml  LoginDialog.ui.qml  SearchDialog.ui.qml  SessionDetailDialog.ui.qml
src/qml/logic/: AdminLoginLogic.qml  BarrierLogic.qml  CameraLogic.qml  HidLogLogic.qml  PricingLogic.qml  SearchLogic.qml
src/qml/pages/: AdminPage.ui.qml  SearchPage.ui.qml
utils/camera/: cameramanager.cpp  cameramanager.h
utils/config/: settings.cpp  settings.h
utils/db/: databasemanager.cpp  databasemanager.h
utils/gstreamer/: gstreamerplayer.cpp  gstreamerplayer.h  videoframeproducer.h
utils/io_barrier/: barriercontroller.cpp  barriercontroller.h  usbrelaybarrier.cpp  usbrelaybarrier.h
utils/io_card/: cardreader.cpp  cardreader.h  hidkeyboardcardreader.cpp  hidkeyboardcardreader.h  hidkeyboardcardreader_device.cpp  hidkeyboardcardreader_device.h  windows_rawinput_router.cpp  windows_rawinput_router.h
utils/ocr/: ocrprocessor.cpp  ocrprocessor.h  tesseract_ocr.cpp  tesseract_ocr.h  yolo_onnx_detector.cpp  yolo_onnx_detector.h
(+152 files in other folders)
